fix license; change version to 0.7 because bintray doesn't allow SNAPSHOT versions

--- a/modules/core/pom.xml
+++ b/modules/core/pom.xml
@@ -10,12 +10,12 @@
 	<parent>
 		<groupId>com.illposed.osc</groupId>
 		<artifactId>javaosc-parent</artifactId>
-		<version>0.7-SNAPSHOT</version>
+		<version>0.7</version>
 		<relativePath>../parent</relativePath>
 	</parent>
 
 	<artifactId>javaosc-core</artifactId>
-	<version>0.7-SNAPSHOT</version>
+	<version>0.7</version>
 
 	<packaging>bundle</packaging>
 
