--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,12 @@
 	<parent>
 		<groupId>com.illposed.osc</groupId>
 		<artifactId>javaosc-parent</artifactId>
-		<version>0.7-SNAPSHOT</version>
+		<version>0.7</version>
 		<relativePath>modules/parent</relativePath>
 	</parent>
 
 	<artifactId>javaosc</artifactId>
-	<version>0.7-SNAPSHOT</version>
+	<version>0.7</version>
 
 	<packaging>pom</packaging>
 
