--- a/modules/parent/pom.xml
+++ b/modules/parent/pom.xml
@@ -18,7 +18,7 @@
 
 	<groupId>com.illposed.osc</groupId>
 	<artifactId>javaosc-parent</artifactId>
-	<version>0.7-SNAPSHOT</version>
+	<version>0.7</version>
 
 	<packaging>pom</packaging>
 
