--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,17 @@ subprojects {
                 from(components.java)
             }
         }
+
+        repositories {
+            maven {
+                name = 'clojars'
+                url = 'https://repo.clojars.org'
+                credentials {
+                    username = System.env['CLOJARS_USER']
+                    password = System.env['CLOJARS_PASSWORD']
+                }
+            }
+        }
     }
 
     tasks.withType(JavaCompile) {
